# greek-interjections

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: production-tests.yml
data/: data.csv  data.xlsx
r/: testing.R
src/greek-interjections/: main.py
src/greek_interjections/: beta_to_unicode.py  main.py  query_diorisis.py  tools.py  types.py
tests/: .test.env  test_beta_to_unicode.py  test_main.py  test_query_diorisis.py  test_tools.py
tests/data/json/: Aeschylus (0085) - Agamemnon (005).json  Euripides (0006) - Electra (042).json  corpus.json
