[tool.poetry]
name = "greek-interjections"
version = "0.1.0"
description = ""
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.25.0"
pylint = "^2.13.5"
mypy = "^0.942"
pandas-stubs = "^1.2.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
