[tool.poetry]
name = "greek_interjections"
version = "1.0.4"
description = ""
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.6"
python-dotenv = "^0.20.0"
pandas = "^1.4.2"
regex = "^2022.3.15"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
tox = "^3.25.0"
pylint = "^2.13.5"
mypy = "^0.942"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-datafiles = "^2.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "cltk.*",
    "regex.*",
    "pandas.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = "datafiles"
[tool.pytest]
env_files = [
    ".test.env"
]

[tool.coverage.run]
omit = "src/greek_interjections/main.py"